# bill_sousa_resume

./: .readthedocs.yml  README.md  pyproject.toml
docs/: conf.py  index.md  requirements.txt
