[tool.poetry]
name = "bill_sousa_resume"
version = "0.0"
description = "Bill Sousa Resume"
authors = ["Bill Sousa <WKSJR99@msn.com>"]
maintainers = ["Bill Sousa"]
readme = "README.md"
# The contents of the README file(s) are used to populate the Description field
# of your distribution’s metadata (similar to long_description in setuptools).
# When multiple files are specified they are concatenated with newlines.
homepage = "https://github.com/BillSousa/bill_sousa_resume"
repository = "https://github.com/BillSousa/bill_sousa_resume"
#documentation
keywords = ["Bill Sousa resume"]
#classifiers
packages = [
	{ include = "bill_sousa_resume", from = "src"}
]
#exclude


[tool.poetry.dependencies]
# These packages are mandatory and form the core of this package’s distribution.
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
docutils = ">=0.20"
numpydoc = "*"
pydata-sphinx-theme = "*"
sphinx = "*"
sphinx-autobuild = "*"
sphinx-sitemap = "*"


[tool.poetry.group.test.dependencies]


[tool.poetry.extras]
# Optional dependencies. They can be opted into by apps.


[tool.poetry.scripts]


[tool.poetry.plugins]


[tool.poetry.urls]
Homepage = "https://github.com/BillSousa/bill_sousa_resume"
Documentation = "https://bill_sousa_resume.readthedocs.io/en/stable/"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
